--- a/menura.Rcheck/menura/DESCRIPTION
+++ b/menura.Rcheck/menura/DESCRIPTION
@@ -16,3 +16,4 @@ LazyData: true
 Imports: ape, sde, stats, graphics
 NeedsCompilation: no
 Packaged: 2017-07-21 04:13:39 UTC; surenr
+Built: R 3.5.1; ; 2018-11-13 08:43:14 UTC; unix
